2007-07-17  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot S5 IS.

2007-07-03  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, config.c: Set EOS properties.

	* library.c: Added Kodak C613 id.

	* ptp.c,ptp.h: Added freeing of objectinfos.

2007-06-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Only allow Nikon fast fs retrieval on the USB port.

2007-06-22  Marcus Meissner  <marcus@jet.franken.de>

	* Added Sony DSC-W200 (new Sony id!)

2007-06-17  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: If we get errors on OpenSession try
	  to send RESET USB control message to the device
	  to reset it / clear buffered stuff.

2007-06-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Nikon Coolpix series capture now determines
	  the captured filenames.

2007-06-05  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, ptp-pack.c, library.c, config.c:
	  Started EOS 400D+ style capture support.

	* ptp.h: Added lots of new Canon Powershot specific defines.

2007-05-28  Paul Walmsley <paul@booyaka.com>

	* usb.c: replace gp_port_usb_check_int_fast() calls with
        timeout save/change/restore and gp_port_usb_check_int()

2007-05-25  Paul Walmsley <paul@booyaka.com>

	* library.c: fix bogus Canon EOS 5D USB product ID

2007-05-23  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Allow configuration of Exposure Bias Compensation

	* usb.c: Handle response instead of data answer (happens on failure).
	* ptp.c: Handle GetObjectHandles errors as non critical (Just as "0 handles").

2007-05-09  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h, usb.c: Send/Receive control messages to class.
	* library.c: Added Kodak C653

2007-05-06  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon IXUS 75 aka PowerShot SD750.
	* library.c: Added Fuji FinePix S9500.
	* library.c: Added Motorola A1200 smart phone in MTP.

2007-04-16  Marcus Meissner  <marcus@jet.franken.de>
